# openemr

./: .codespell-ignore-words.txt  .gitattributes  .gitignore  .pre-commit-config.yaml  .stylelintignore  ARCHITECTURE.md  Architecture.md  Audit.md  CHANGELOG.md  PATIENT_DASHBOARD_MIGRATION.md  README-LOCAL-DOCKER.md  README.md  USER.md  Users.md  W2_ARCHITECTURE.md  cost_analysis_Wk2.md  jest.config.js  latency_percentiles.py  rector.php
agent/copilot-api/: .env.example  .gitignore  Dockerfile  README.md  corpus.db  eval_results.json  pyproject.toml  smoke_test.py
agent/copilot-api/app/: auth.py  llm.py  main.py  observability.py  orchestrator.py  router_logic.py  routes.py  schemas.py  startup.py  tool_planner.py  verifier.py
agent/copilot-api/app/extractors/: __init__.py  _eval_mocks.py  _eval_mocks_a.py  anthropic_tools.py  intake_form.py  lab_pdf.py  medication_list.py  normalize.py
agent/copilot-api/app/graph/: __init__.py  build.py  critic.py  nodes.py  state.py  supervisor.py
agent/copilot-api/app/prompts/: brief_v1.txt
agent/copilot-api/app/rag/: __init__.py  _eval_mocks.py  chunker.py  contextualization.py  contracts.py  corpus.py  embedder.py  phi_filter.py  query_rewriter.py  reranker.py  retriever.py  synonyms.py
agent/copilot-api/demo/: README.md  seed_demo_patient.sql  validate_demo_patient.sql
agent/copilot-api/evals/: README.md  case_schema.json  floor.json  regression_dry_run.md  rubrics.py  runner.py
agent/copilot-api/evals/cases/: 01_a1c_trend.json  02_missing_allergies.json  03_cross_patient.json  04_refusal_scope.json  05_unsupported_source.json  06_stale_meds.json  07_lists_rx_conflict.json  08_sensitive_encounter.json  09_prompt_injection.json  10_latency_budget.json  11_allergy_conflict_surfaced.json  12_all_wrong_patient_packets.json  (+22 more)
agent/copilot-api/scripts/: build_corpus.py  diagnose_brief.py  reset_demo_state.sh  seed_demo_patients.sql  test_reset_modes_smoke.sh  write_extraction_cases.py
agent/copilot-api/tests/: CATALOG.md  conftest.py  test_auth.py  test_llm_default_model.py  test_observability.py  test_schemas.py  test_verifier.py
(+423 files in other folders)
