[project]
name = "copilot-api"
version = "0.1.0"
description = "Clinical Co-Pilot sidecar - LLM orchestration + verifier"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "anthropic>=0.92",
    "pydantic>=2.9",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "langfuse>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
