[project]
name = "copilot-api"
version = "0.2.0"
description = "Clinical Co-Pilot sidecar - LLM orchestration + verifier (Wk2: multimodal evidence agent)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "anthropic>=0.92",
    "pydantic>=2.9",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "langfuse>=3.0",
    # ---- Wk2 additions (Plan §3 decisions 1-8) ----
    "langgraph>=0.2.40",          # decision #1 — orchestration
    "pdfplumber>=0.11",           # decision #4 — PDF text + bbox (MIT)
    "pypdfium2>=4.30",            # decision #4 — PDF rasterization (Apache)
    "rank-bm25>=0.2.2",           # decision #6 — sparse retrieval
    "voyageai>=0.3",              # decision #7 — embedder
    "cohere>=5.13",               # decision #8 — reranker
    "sqlite-vec==0.1.6",          # decision #5 — vector store (pinned)
    "jsonschema>=4.23",           # eval case schema validation (§15.5.3)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",            # §15.5.5 coverage gates
]
# Live-vendor smoke + corpus build pulls these too:
live = [
    "voyageai>=0.3",
    "cohere>=5.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
